Use variants to select JavaFX platform Jars in the dependency graph
- Metadata Rule (metadata could later be published by JavaFX)
- Transitive dependencies no longer need to be maintained in the plugin
- Empty Jars are no longer on the classpath
- Manual classpath and module path modification limited to minimum
- No hard dependency on 'org.javamodularity:moduleplugin' anymore
  - Users can then choose between Gradle's built in Modul System
    support or the javamodularity plugin
- Dependency declaration done lazily (via withDependencies)