@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018, Gluon
+ * Copyright (c) 2018, 2023, Gluon
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -29,21 +29,100 @@
  */
 package org.openjfx.gradle;
 
+import com.google.gradle.osdetector.OsDetector;
 import com.google.gradle.osdetector.OsDetectorPlugin;
+import org.gradle.api.GradleException;
+import org.gradle.api.NonNullApi;
 import org.gradle.api.Plugin;
 import org.gradle.api.Project;
-import org.javamodularity.moduleplugin.ModuleSystemPlugin;
-import org.openjfx.gradle.tasks.ExecTask;
+import org.gradle.api.file.FileCollection;
+import org.gradle.api.plugins.ApplicationPlugin;
+import org.gradle.api.plugins.JavaBasePlugin;
+import org.gradle.api.tasks.JavaExec;
+import org.gradle.api.tasks.SourceSetContainer;
+import org.gradle.util.GradleVersion;
+import org.openjfx.gradle.metadatarule.JavaFXComponentMetadataRule;
 
+import java.io.File;
+import java.util.Arrays;
+import java.util.List;
+
+import static org.openjfx.gradle.JavaFXOptions.MAVEN_JAVAFX_ARTIFACT_GROUP_ID;
+
+@NonNullApi
 public class JavaFXPlugin implements Plugin<Project> {
 
     @Override
     public void apply(Project project) {
+        if (GradleVersion.current().compareTo(GradleVersion.version("6.1")) < 0) {
+            throw new GradleException("This plugin requires Gradle 6.1+");
+        }
+
+        // Make sure 'java-base' is applied first, which makes the 'SourceSetContainer' available.
+        // More concrete Java plugins that build on top of 'java-base' – like 'java-library' or 'application' –
+        // will be applied by the user.
+        project.getPlugins().apply(JavaBasePlugin.class);
+
+        // Use 'OsDetectorPlugin' to select the platform the build runs on as default.
         project.getPlugins().apply(OsDetectorPlugin.class);
-        project.getPlugins().apply(ModuleSystemPlugin.class);
 
-        project.getExtensions().create("javafx", JavaFXOptions.class, project);
+        JavaFXOptions javaFXOptions = project.getExtensions().create("javafx", JavaFXOptions.class,
+                project.getExtensions().getByType(SourceSetContainer.class),
+                project.getExtensions().getByType(OsDetector.class));
 
-        project.getTasks().create("configJavafxRun", ExecTask.class, project);
+        // Register 'JavaFXComponentMetadataRule' to add variant information to all JavaFX modules.
+        // Future JavaFX versions could publish this information using Gradle Metadata.
+        for (JavaFXModule javaFXModule: JavaFXModule.values()) {
+            project.getDependencies().getComponents().withModule(
+                    MAVEN_JAVAFX_ARTIFACT_GROUP_ID + ":" + javaFXModule.getArtifactName(),
+                    JavaFXComponentMetadataRule.class);
+        }
+
+        // Only set the default 'configuration' to 'implementation' when the 'java' plugin is applied.
+        // Otherwise, it won't exist. (Note: 'java' is implicitly applied by 'application' or 'java-library'
+        // and other Java-base plugins like Kotlin JVM)
+        project.getPlugins().withId("java", p -> javaFXOptions.setConfiguration("implementation"));
+
+        // Only do addition configuration of the ':run' task when the 'application' plugin is applied.
+        // Otherwise, that task does not exist.
+        project.getPlugins().withId("application", p -> {
+            project.getTasks().named(ApplicationPlugin.TASK_RUN_NAME, JavaExec.class, execTask -> {
+                if (GradleVersion.current().compareTo(GradleVersion.version("6.4")) >= 0 && execTask.getMainModule().isPresent()) {
+                    return; // a module, as determined by Gradle core
+                }
+
+                execTask.doFirst(a -> {
+                    if (execTask.getExtensions().findByName("moduleOptions") != null) {
+                        return; // a module, as determined by modularity plugin
+                    }
+
+                    putJavaFXJarsOnModulePathForClasspathApplication(execTask, javaFXOptions);
+                });
+            });
+        });
+    }
+
+    /**
+     * Gradle does currently not put anything on the --module-path if the application itself is executed from
+     * the classpath. Hence, this patches the setup of Gradle's standard ':run' task to move all JavaFX Jars
+     * from '-classpath' to '-module-path'. This functionality is only relevant for NON-MODULAR apps.
+     */
+    private static void putJavaFXJarsOnModulePathForClasspathApplication(JavaExec execTask, JavaFXOptions javaFXOptions) {
+        FileCollection classpath = execTask.getClasspath();
+
+        execTask.setClasspath(classpath.filter(jar -> !isJavaFXJar(jar, javaFXOptions.getPlatform())));
+        var modulePath = classpath.filter(jar -> isJavaFXJar(jar, javaFXOptions.getPlatform()));
+
+        execTask.getJvmArgumentProviders().add(() -> List.of(
+                "--module-path", modulePath.getAsPath(),
+                "--add-modules", String.join(",", javaFXOptions.getModules())
+        ));
+    }
+
+    private static boolean isJavaFXJar(File jar, JavaFXPlatform platform) {
+        return jar.isFile() &&
+                Arrays.stream(JavaFXModule.values()).anyMatch(javaFXModule ->
+                        javaFXModule.compareJarFileName(platform, jar.getName()) ||
+                                javaFXModule.getModuleJarFileName().equals(jar.getName()));
     }
 }
